--- a/assets/css/_login.scss
+++ b/assets/css/_login.scss
@@ -38,13 +38,20 @@
     h2{
         margin-bottom: 20px;
     }
+    .pasword{
+        i{
+            font-size: 10px;
+            right: 7px;
+            bottom: 12px;
+        }
+    }
    
     input{
+        border: 1px solid #7d7d7d5e ;
         height: 40px;
         display: block;
         width: 100%;
-        margin-bottom: 20px;  
-        border: none;
+        margin-bottom: 20px;        
         outline: none;      
     }
     #check{
