adding cart.html

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,6 +12,7 @@
 @import"_shop.scss";
 @import"_login.scss";
 @import"_contact.scss";
+@import"_cart.scss";
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 
 fieldset, label { margin: 0; padding: 0; }
