--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2007,6 +2007,181 @@
   background-color: black;
 }
 
+#cart-top-part {
+  padding-top: 100px;
+}
+#cart-top-part .right-modern {
+  background-image: url(https://ninetheme.com/themes/venam/v1/wp-content/uploads/2021/08/banner-1.jpg);
+  background-position: center;
+  background-size: cover;
+}
+#cart-top-part .right-modern button {
+  background: #0465d2;
+  padding: 10px 15px;
+  color: #ffffff;
+  border: none;
+  transition: 0.5s all;
+  border-radius: 5px;
+  font-size: 12px;
+}
+#cart-top-part .right-modern button:hover {
+  background-color: black;
+}
+#cart-top-part .right-modern p {
+  font-size: 12px;
+  color: #7D7D7D;
+  padding: 15px 0;
+}
+#cart-top-part .left-medern {
+  background-position: center;
+  background-size: cover;
+  background-image: url(https://ninetheme.com/themes/venam/v1/wp-content/uploads/2021/06/banner-2.jpg);
+}
+
+#basket-products {
+  padding: 40px 0;
+}
+#basket-products .basket-items {
+  border: 2px solid #ff6000;
+}
+#basket-products .empty-part {
+  padding: 20px 0;
+}
+#basket-products .empty-part i {
+  color: #ff6000;
+  margin-right: 10px;
+}
+#basket-products .empty-part p {
+  font-size: 15px;
+  color: #7D7D7D;
+}
+#basket-products .empty-part .button {
+  text-align: center;
+}
+#basket-products .empty-part .button button {
+  padding: 15px 20px;
+  border-radius: 5px;
+  border: none;
+  color: #ffffff;
+  background-color: #ff6000;
+}
+#basket-products .basket-items .top-header {
+  border: 1px solid rgba(125, 125, 125, 0.3843137255);
+}
+#basket-products .basket-items img {
+  height: 40px;
+  width: 40px;
+}
+#basket-products .basket-items p {
+  margin: 0;
+}
+#basket-products .basket-items .mid-header {
+  margin: 10px 0;
+  border: 1px solid rgba(125, 125, 125, 0.3843137255);
+}
+#basket-products .basket-items .mid-header input {
+  width: 80px;
+  outline: none;
+  border: none;
+  font-size: 14px;
+  text-align: center;
+}
+#basket-products .basket-items .mid-header input::-webkit-outer-spin-button, #basket-products .basket-items .mid-header input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+#basket-products .basket-items .mid-header .fa-plus,
+#basket-products .basket-items .mid-header .fa-minus {
+  top: 8px;
+  font-size: 14px;
+}
+#basket-products .basket-items .mid-header .fa-minus {
+  left: 20px;
+}
+#basket-products .basket-items .mid-header .fa-plus {
+  right: 50px;
+}
+#basket-products .basket-items .buttom-header button {
+  border-radius: 5px;
+  color: #ffffff;
+  background-color: #ff6000;
+  border: none;
+  outline: none;
+  padding: 10px 10px;
+  transition: 0.5s all;
+}
+#basket-products .basket-items .buttom-header button:hover {
+  background-color: black;
+}
+#basket-products .basket-items .buttom-header input {
+  outline: none;
+  border: none;
+  padding: 10px 20px;
+  width: 50%;
+}
+#basket-products .basket-items .buttom-header input::-moz-placeholder {
+  font-family: thin;
+  font-size: 12px;
+}
+#basket-products .basket-items .buttom-header input:-ms-input-placeholder {
+  font-family: thin;
+  font-size: 12px;
+}
+#basket-products .basket-items .buttom-header input::placeholder {
+  font-family: thin;
+  font-size: 12px;
+}
+#basket-products .basket-items .buttom-header #uptade {
+  opacity: 0.4;
+}
+#basket-products .basket-items .buttom-header #uptade:hover {
+  background-color: #7D7D7D;
+  color: black;
+}
+#basket-products .basket-items .cart-total {
+  background-color: #f2f2f2;
+  border: 1px solid rgba(125, 125, 125, 0.3843137255);
+  text-align: center;
+}
+#basket-products .basket-items .cart-total .sub-total {
+  text-align: center;
+}
+#basket-products .basket-items .cart-total .sub-total .radio-free-shipping input {
+  width: 20px;
+}
+#basket-products .basket-items .cart-total .sub-total table tr {
+  display: flex;
+  justify-content: space-between;
+}
+#basket-products .basket-items .cart-total .sub-total table tr td {
+  margin-right: 100px;
+}
+#basket-products .basket-items .cart-total .sub-total table tr td .radio-free-shipping div,
+#basket-products .basket-items .cart-total .sub-total table tr td .radio-free-shipping p {
+  width: 100%;
+  margin-left: 35px;
+  text-align: left;
+  font-size: 14px;
+  color: #7e7e7e;
+}
+#basket-products .basket-items .cart-total .sub-total table tr td .radio-free-shipping #truck {
+  color: #f7ba01;
+}
+#basket-products .basket-items .cart-total .sub-total table tr td .radio-free-shipping #ak {
+  color: black;
+}
+#basket-products .basket-items #cart-id button {
+  padding: 10px 0;
+  margin-top: 30px;
+  color: white;
+  background-color: black;
+  transition: 0.5s all;
+  border-radius: 5px;
+}
+#basket-products .basket-items #cart-id button:hover {
+  background-color: #ff6000;
+}
+
 fieldset, label {
   margin: 0;
   padding: 0;
