cart adding item and editing

--- a/assets/css/_cart.scss
+++ b/assets/css/_cart.scss
@@ -91,6 +91,9 @@
 
 
         .mid-header {
+            #remove-item{
+                cursor: pointer;
+            }
             margin: 10px 0;
             border: 1px solid #7d7d7d62;
 
