--- a/assets/css/_cart.scss
+++ b/assets/css/_cart.scss
@@ -149,6 +149,7 @@
                 }
             }
             #uptade{
+                cursor: pointer;
                 &:hover{
                     background-color: #7D7D7D;
                     color: black;
