--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -417,6 +417,9 @@
 
 #futured-products {
     padding: 100px 0;
+    h4{
+        font-size: 20px;
+    }
 
     #hover-div {
         margin-bottom: 20px;
