--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1756,7 +1756,30 @@
   padding: 15px 0;
 }
 #shop-modern-tecnology .all-categories-slider {
-  padding: 40px 0;
+  background-color: #f2f2f2;
+  padding-top: 40px;
+}
+#shop-modern-tecnology .all-categories-slider h4 {
+  margin-bottom: 20px;
+}
+#shop-modern-tecnology .all-categories-slider #slider-shop-1 h4 {
+  margin-top: 20px;
+}
+#shop-modern-tecnology .all-categories-slider .owl-carousel .owl-nav {
+  position: relative;
+}
+#shop-modern-tecnology .all-categories-slider .owl-carousel .owl-nav button {
+  position: absolute;
+  margin: 0 20px;
+  right: 0;
+  top: -280px;
+}
+#shop-modern-tecnology .all-categories-slider .owl-carousel .owl-nav button:first-child {
+  right: 20px;
+}
+#shop-modern-tecnology .all-categories-slider .owl-carousel .owl-nav button i {
+  font-size: 14px;
+  margin-right: 20px;
 }
 #shop-modern-tecnology .all-categories-slider .slider img {
   width: 100%;
