--- a/assets/css/_cart.scss
+++ b/assets/css/_cart.scss
@@ -226,3 +226,61 @@
 
     }
 }
+#items-purchased{
+    .product-items {
+        position: relative;
+        text-align: center;
+
+        &:hover {
+            & .hover-detail {
+                opacity: 1;
+                visibility: visible;
+                height: 80px;
+            }
+        }
+
+        p {
+            color: #ff6000;
+
+            span {
+                margin-right: 10px;
+                color: #858585;
+            }
+        }
+
+        img {
+            width: 100%;
+            
+        }
+
+        .hover-detail {
+            position: absolute;
+            bottom: 78px;
+            left: 25px;
+            width: 160px;
+            opacity: 0;
+            visibility: hidden;
+            height: 0;
+            transition: .5s all;
+            overflow: hidden;
+
+            .top {
+                background-color: #ffffff;
+
+                svg {
+                    margin: 0 15px 10px;
+                }
+            }
+
+            button {
+                width: 100%;
+                background-color: #3a3a3a;
+                border: none;
+
+                color: #ffffff;
+                padding: 10px 0;
+            }
+        }
+    }
+
+}
