--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -1,3 +1,17 @@
+#go-to-up{
+    display: none;
+    z-index: 1111;
+    border-radius: 5px;
+    position: fixed;
+    bottom: 30px;
+    right: 20px;
+    background-color: #f7ba01 ;
+    padding: 15px;
+    i{
+        font-size: 14px;
+        color: black;
+    }
+}
 #slider {
     background-color: #f3f2ee;
     padding: 100px 0;
