--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -285,9 +285,10 @@ header {
   .svgs {
     display: flex;
     justify-content: end;
-    svg {
+    a{
       margin-left: 20px;
-    }
+
+    }   
 
     .svgCompare {
       position: relative;
