--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -164,6 +164,9 @@
                 margin-right: 10px;
                 color: #858585;
             }
+            #product-price{
+                color: #ff6000;
+            }
         }
 
         img {
@@ -321,6 +324,9 @@
                     margin-right: 10px;
                     color: #858585;
                 }
+                #product-price{
+                    color: #ff6000;
+                }
             }
 
             img {
@@ -464,6 +470,7 @@
             color: #ff6000;
             font-family: thin;
             margin-bottom: 0;
+            
         }
 
         i {
