--- a/assets/css/_responsive.scss
+++ b/assets/css/_responsive.scss
@@ -38,6 +38,7 @@
       .all-phone-header {
         padding: 26px 0;
         i {
+          cursor: pointer;
           font-size: 30px;
           color: white;
           margin-right: 20px;
